Remove deprecated SecurityManager allow flag
Remove the `-Djava.security.manager=allow` JVM argument from Android
Studio properties. This flag was used to enable the deprecated
SecurityManager.

Bug: 505889877
Test: Existing
Change-Id: Id79b9921029e1efa894ef10974d198b7755a759a